--- a/docs/stylesheets/_workshop.css
+++ b/docs/stylesheets/_workshop.css
@@ -1,14 +1,30 @@
 .workshop-header {
     background-image: linear-gradient(var(--sky-blue-grey), #ECF5F8);
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 11.5rem;
-    padding-inline: 2.5rem;
+    padding: 2rem 2.5rem;
+    position: relative;
+}
+
+.workshop-main-header {
+    flex-direction: column;
+}
+
+.workshop-main-header p {
+    max-width: 24rem;
+}
+
+.workshop-header h1 {
+    margin-bottom: 0.5rem;
 }
 
 .workshop-header p {
+    margin: 0;
+}
+
+.workshop-tagline {
     text-align: center;
 }
 
@@ -43,7 +59,7 @@
 .template-icon {
     grid-area: icon;
     margin: 0.5rem;
-    max-height: 10rem;
+    max-height: 100%;
 }
 
 .template-stats {
@@ -79,8 +95,15 @@
 }
 
 .template-back-link {
-    align-self: flex-start;
+    position: absolute;
+    top: 1.5rem;
+    left: 2.5rem;
     color: var(--alces-grey) !important;
+}
+
+.template-title {
+    max-width: 20rem;
+    margin-left: 1rem;
 }
 
 @media screen and (max-width: 59.9375em) {
