Rename to flight warehouse

--- a/custom_theme/partials/header.html
+++ b/custom_theme/partials/header.html
@@ -52,8 +52,8 @@
       <a href="{{ base_url }}/solo">
         FLIGHT SOLO
       </a>
-      <a href="{{ base_url }}/workshop">
-        FLIGHT WORKSHOP
+      <a href="{{ base_url }}/warehouse">
+        FLIGHT WAREHOUSE
       </a>
       <a href="{{ base_url }}/docs">
         DOCUMENTATION
