--- a/custom_theme/partials/nav.html
+++ b/custom_theme/partials/nav.html
@@ -35,8 +35,8 @@
       </a>
     </li>
     <li>
-      <a href="{{ base_url }}/workshop">
-        FLIGHT WORKSHOP
+      <a href="{{ base_url }}/warehouse">
+        FLIGHT WAREHOUSE
       </a>
     </li>
     <li>
