--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -3,7 +3,7 @@
 @import '_nav.css';
 @import '_home.css';
 @import '_solo.css';
-@import '_workshop.css';
+@import '_warehouse.css';
 @import '_footer.css';
 
 html {
