--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 11.5rem;
     padding: 2rem 2.5rem;
     position: relative;
 }
@@ -59,7 +58,7 @@
 .template-icon {
     grid-area: icon;
     margin: 0.5rem;
-    max-height: 100%;
+    max-height: 7.5rem;
 }
 
 .template-stats {
