--- a/partials/templates/template-card.html
+++ b/partials/templates/template-card.html
@@ -1,4 +1,4 @@
-<a class="card template-card" href="{{ link }}" id="{{ link }}">
+<a class="card template-card link" href="{{ link }}" id="{{ link }}">
   <h2 class="template-header card-text">{{ title }}</h2>
   <img
     alt=""
