Add docs to template page as partial

--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -117,7 +117,11 @@
     min-width: fit-content;
     width: 20%;
     padding: 1.5rem 2rem !important;
-    margin: 2rem auto 3rem !important;
+    margin: 2rem auto 0 !important;
+}
+
+.template-content h2 {
+    margin-top: 3rem;
 }
 
 .template-content .filename {
