--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -1,7 +1,7 @@
 <script src="https://kit.fontawesome.com/5d76af6daa.js" crossorigin="anonymous"></script>
 
-<div class="no-tabs full-width-container">
-  <div class="warehouse-header">
+<div class="no-tabs">
+  <div class="warehouse-header template-page-header full-width-container">
     <a class="template-back-link" href="javascript:history.back()">< Back</a>
     <img
       alt=""
@@ -46,7 +46,7 @@
         </li>
       </ul>
     </div>
-    <h2>Download</h2>
+    <h1>Download</h1>
     <p class="tagline">
       Start building your cluster by downloading the {{ title }} template.
     </p>
@@ -67,5 +67,7 @@
 ```
 {% include "warehouse/templates/slurm-team-edition.yml" %}
 ```
+
+    <h1>Launch</h1>
   </div>
 </div>
