--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -98,6 +98,10 @@ html {
   margin-top: 0.5rem;
 }
 
+.md-typeset :target {
+  --md-scroll-margin: 4.3rem;
+}
+
 @media screen and (min-width: 76.25em) {
   .md-content__inner {
     margin: 0 !important;
