--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -2,7 +2,7 @@
 
 <div class="no-tabs">
   <div class="warehouse-header template-page-header full-width-container">
-    <a class="template-back-link" href="javascript:history.back()">< Back</a>
+    <a class="template-back-link" href="..">< Back</a>
     <img
       alt=""
       class="template-icon"
