--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -19,28 +19,38 @@
       <ul class="template-stats card-text">
         <li>
           <i class="template-stats-icon fa-solid fa-users"></i>
-          <strong>Number of users:</strong>
-          <span> {{ num_users }} </span>
+          <div>
+            <strong>Number of users:</strong>
+            <span> {{ num_users }} </span>
+          </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-clock" title="Lifetime"></i>
-          <strong>Lifetime:</strong>
-          <span> {{ lifetime }} </span>
+          <div>
+            <strong>Lifetime:</strong>
+            <span> {{ lifetime }} </span>
+          </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-database" title="Storage"></i>
-          <strong>Storage:</strong>
-          <span> {{ storage }} </span>
+          <div>
+            <strong>Storage:</strong>
+            <span> {{ storage }} </span>
+          </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-credit-card" title="Estimated running costs"></i>
-          <strong>Estimated running costs:</strong>
-          <span> {{ cost }} </span>
+          <div>
+            <strong>Estimated running costs:</strong>
+            <span> {{ cost }} </span>
+          </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-dumbbell" title="Capability"></i>
-          <strong>Capability:</strong>
-          <span> {{ capability }} </span>
+          <div>
+            <strong>Capability:</strong>
+            <span> {{ capability }} </span>
+          </div>
         </li>
       </ul>
     </div>
