--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -11,7 +11,7 @@
     >
     <div class="template-title-container">
       <h1 class="template-title"></h1>
-      <p id="tagline"></p>
+      <p class="tagline"></p>
     </div>
   </div>
 
@@ -22,35 +22,35 @@
           <i class="template-stats-icon fa-solid fa-users"></i>
           <div>
             <strong>Number of users:</strong>
-            <span id="num_users"></span>
+            <span class="num_users"></span>
           </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-clock" title="Lifetime"></i>
           <div>
             <strong>Lifetime:</strong>
-            <span id="lifetime"></span>
+            <span class="lifetime"></span>
           </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-database" title="Storage"></i>
           <div>
             <strong>Storage:</strong>
-            <span id="storage"></span>
+            <span class="storage"></span>
           </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-credit-card" title="Estimated running costs"></i>
           <div>
             <strong>Estimated running costs:</strong>
-            <span id="cost"></span>
+            <span class="cost"></span>
           </div>
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-dumbbell" title="Capability"></i>
           <div>
             <strong>Capability:</strong>
-            <span id="capability"> {{ capability }} </span>
+            <span class="capability"></span>
           </div>
         </li>
       </ul>
