Add muscly arms to capability stats

--- a/partials/warehouse/template-card.html
+++ b/partials/warehouse/template-card.html
@@ -25,7 +25,9 @@
       </li>
       <li>
         <i class="template-stats-icon fa-solid fa-dumbbell" title="Capability"></i>
-        <span class="capability"></span>
+        <span class="capability">
+          {% include "warehouse/muscly-arms.html" %}
+        </span>
       </li>
     </ul>
     <span class="template-tagline tagline"></span>
