--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -48,9 +48,11 @@
         </li>
         <li>
           <i class="template-stats-icon fa-solid fa-dumbbell" title="Capability"></i>
-          <div>
-            <strong>Capability:</strong>
-            <span class="capability"></span>
+          <div class="muscly-arm-container">
+            <strong class="capability-label">Capability:</strong>
+            <span class="capability">
+              {% include "warehouse/muscly-arms.html" %}
+            </span>
           </div>
         </li>
       </ul>
