--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -123,6 +123,22 @@
     margin: 2rem auto 0 !important;
 }
 
+.muscly-arm-container {
+    display: flex;
+    align-items: center;
+}
+
+.muscly-arm {
+    max-height: 0.9rem;
+    display: block;
+    filter: brightness(1.8) saturate(0.2);
+    margin-right: 0.3rem;
+}
+
+.capability-label {
+    margin-right: 0.5rem;
+}
+
 #template-content h1 {
     margin-top: 3rem;
     margin-bottom: 1rem;
