--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -77,10 +77,7 @@
         download
       >
         <span class="tagline card-text">{{ id }}.yml</span>
-        <img
-          alt=""
-          src="{{ config.site_url }}/solo/assets/images/download.svg"
-        >
+        <i class="fa-solid fa-download"></i>
       </a>
     </div>
 ```
