Fix muscly arm margins

--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -131,7 +131,7 @@
 .muscly-arm {
     max-height: 0.9rem;
     filter: brightness(1.8) saturate(0.2);
-    margin-right: 0.3rem;
+    margin: 0.27rem 0.3rem 0.27rem 0;
 }
 
 .capability-label {
