Fix to use relative links

--- a/partials/warehouse/template-card.html
+++ b/partials/warehouse/template-card.html
@@ -3,7 +3,7 @@
   <img
     alt=""
     class="template-icon"
-    src="{{ config.site_url }}/assets/images/template-icons/{{ id }}.svg"
+    src="../assets/images/template-icons/{{ id }}.svg"
   >
   <div>
     <ul class="template-stats card-text">
