--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -1,5 +1,6 @@
 <script src="https://kit.fontawesome.com/5d76af6daa.js" crossorigin="anonymous"></script>
-<script src="{{ config.site_url }}/javascripts/warehouse.js"></script>
+<script src="../../javascripts/warehouse.js"></script>
+
 
 <div class="no-tabs">
   <div class="warehouse-header template-page-header full-width-container">
@@ -7,7 +8,7 @@
     <img
       alt=""
       class="template-icon"
-      src="{{ config.site_url }}/assets/images/template-icons/{{ id }}.svg"
+      src="../../assets/images/template-icons/{{ id }}.svg"
     >
     <div class="template-title-container">
       <h1 class="template-title"></h1>
@@ -72,7 +73,7 @@
     <div class="highlight">
       <a
         title="Download {{ id }}.yml"
-        href="{{ config.site_url }}/assets/templates/{{ id }}.yml"
+        href="../../assets/templates/{{ id }}.yml"
         class="filename card link"
         download
       >
