Fix to use relative links for muscly arms

--- a/partials/warehouse/template-card.html
+++ b/partials/warehouse/template-card.html
@@ -26,7 +26,23 @@
       <li>
         <i class="template-stats-icon fa-solid fa-dumbbell" title="Capability"></i>
         <span class="capability">
-          {% include "warehouse/muscly-arms.html" %}
+          <div class="muscly-arm-container">
+            <img
+              alt=""
+              class="muscly-arm"
+              src="../assets/images/template-icons/muscly-arm.svg"
+            >
+            <img
+              alt=""
+              class="muscly-arm"
+              src="../assets/images/template-icons/muscly-arm.svg"
+            >
+            <img
+              alt=""
+              class="muscly-arm"
+              src="../assets/images/template-icons/muscly-arm.svg"
+            >
+          </div>
         </span>
       </li>
     </ul>
