--- a/partials/warehouse/template-page.html
+++ b/partials/warehouse/template-page.html
@@ -60,7 +60,23 @@
                 title="Indicates the strength of the cluster in terms of scale of the service. This is a combination of recommended users, lifetime, storage and compute capacity.">?</sup>:
             </strong>
             <span class="capability">
-              {% include "warehouse/muscly-arms.html" %}
+              <div class="muscly-arm-container">
+                <img
+                  alt=""
+                  class="muscly-arm"
+                  src="../../assets/images/template-icons/muscly-arm.svg"
+                >
+                <img
+                  alt=""
+                  class="muscly-arm"
+                  src="../../assets/images/template-icons/muscly-arm.svg"
+                >
+                <img
+                  alt=""
+                  class="muscly-arm"
+                  src="../../assets/images/template-icons/muscly-arm.svg"
+                >
+              </div>
             </span>
           </div>
         </li>
