--- a/partials/warehouse/template-card.html
+++ b/partials/warehouse/template-card.html
@@ -1,9 +1,9 @@
-<a class="card template-card link" href="{{ id }}" id="{{ id }}">
+<a class="card template-card link" id="blank-template-card" href="#" hidden>
   <h2 class="template-title card-text"></h2>
   <img
     alt=""
     class="template-icon"
-    src="../assets/images/template-icons/{{ id }}.svg"
+    src=""
   >
   <div>
     <ul class="template-stats card-text">
