--- a/docs/stylesheets/_warehouse.css
+++ b/docs/stylesheets/_warehouse.css
@@ -41,14 +41,15 @@
 .template-card {
     display: grid;
     grid-template:
-        [row1-start] "header header" 1fr [row1-end]
-        [row2-start] "icon stats" 5fr [row2-end]
+        [row1-start] "header header" auto [row1-end]
+        [row2-start] "icon stats" auto [row2-end]
         / 1fr 1fr;
     align-items: center;
-    column-gap: 1.5rem;
+    column-gap: 1.2rem;
     row-gap: 0.5rem;
     margin: 0 !important;
     max-width: 24rem;
+    min-height: 14.2rem;
 }
 
 #blank-template-card {
@@ -87,7 +88,7 @@
 }
 
 .template-stats-icon {
-    margin-right: 0.5rem;
+    margin-right: 0.4rem;
     color: var(--alces-blue);
     justify-self: center;
     align-self: center;
@@ -233,6 +234,11 @@
 
     .template-card {
         grid-gap: 1rem;
+        width: 17.5rem;
+    }
+
+    .template-card .template-tagline {
+        font-size: 0.7rem;
     }
 
     .template-icon {
@@ -243,5 +249,9 @@
 @media screen and (max-width: 25em) {
     #warehouse {
         grid-template-columns: 1fr;
+    }
+
+    .template-card {
+        width: 100%;
     }
 }
