--- a/partials/warehouse/filter-dropdown.html
+++ b/partials/warehouse/filter-dropdown.html
@@ -1,20 +1,13 @@
-<div class="filter-container">
+<div class="filter-container" id="blank-filter-container">
   <div class="filter">
-    <i class="template-stats-icon fa-solid fa-users"></i>
-    <span>Number of users</span>
+    <i class="template-stats-icon fa-solid"></i>
+    <span></span>
     <i class="fa-solid fa-chevron-down"></i>
   </div>
   <div class="dropdown-container">
     <div class="connector"></div>
     <div class="dropdown">
-      <label class="dropdown-option" for="num-users-1">
-        <input type="checkbox" id="num-users-1">
-        Single user
-      </label>
-      <label class="dropdown-option" for="num-users-2">
-        <input type="checkbox" id="num-users-2">
-        Multiple users
-      </label>
+      <div class="dropdown-options"></div>
       <a class="button">CLEAR FILTERS</a>
     </div>
   </div>
