Add simplified functionality to num_users filter

--- a/partials/warehouse/filter-dropdown.html
+++ b/partials/warehouse/filter-dropdown.html
@@ -1,4 +1,4 @@
-<div class="filter-container" id="blank-filter-container">
+<div id="blank-filter-container">
   <div class="filter">
     <i class="template-stats-icon fa-solid"></i>
     <span></span>
